Update Hero copy ('Outsmart the Sports Markets') and Arbitrage card text to improve conversion while staying FB safe

--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
                 <i class="fa-solid fa-bolt"></i> Built for data-driven analysts
             </div>
             <h1 class="hero__title">
-                Market Efficiency,<br>
-                <span class="hero__title--gradient">Quantified.</span>
+                Outsmart the<br>
+                <span class="hero__title--gradient">Sports Markets.</span>
             </h1>
             <p class="hero__subtitle">
-                Analyze sports data through <strong>probabilistic modeling</strong> and <strong>quantitative analysis</strong>. Identify market discrepancies with mathematical precision.
+                Stop relying on gut feeling. Use <strong>PhD-level algorithms</strong> to find mispriced odds and structure your positions like a data-driven pro.
             </p>
             <div class="hero__actions">
                 <a href="https://whop.com/arbitrage-calculator-pro-8/arbitrage-calculator-pro/" target="_blank"
@@ -123,14 +123,14 @@
                     <div class="step-card__num">02</div>
                     <div class="step-card__icon"><i class="fa-solid fa-calculator"></i></div>
                     <h4>Calculate Stakes</h4>
-                    <p>Our engine computes the optimal stake allocation for each outcome to equalize your payout.</p>
+                    <p>Our engine calculates exactly how many units to place on each side to mathematically balance your position.</p>
                 </div>
                 <div class="step-card__arrow"><i class="fa-solid fa-arrow-right"></i></div>
                 <div class="step-card">
                     <div class="step-card__num">03</div>
                     <div class="step-card__icon"><i class="fa-solid fa-sack-dollar"></i></div>
                     <h4>Capture the Edge</h4>
-                    <p>Execute the positions. Outcome coverage is defined upfront — execution depends on timing, limits, and market rules.</p>
+                    <p>Execute the strategy. No matter who scores or wins, your mathematical edge is locked in before the game even starts.</p>
                 </div>
             </div>
 
